[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "grainstat"
version = "1.0.0"
description = "Professional grain size analysis for materials science"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Materials Science Lab", email = "contact@materialslab.com"}
]
maintainers = [
    {name = "Materials Science Lab", email = "contact@materialslab.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
keywords = [
    "materials science",
    "grain analysis",
    "microstructure",
    "image processing",
    "metallurgy",
    "microscopy",
    "SEM",
    "optical microscopy",
    "ASTM",
    "grain size"
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "scikit-image>=0.18.0",
    "matplotlib>=3.3.0",
    "pandas>=1.3.0",
    "Pillow>=8.0.0",
    "seaborn>=0.11.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.8",
    "mypy>=0.900",
    "pre-commit>=2.0.0"
]
pdf = [
    "reportlab>=3.5.0"
]
interactive = [
    "ipywidgets>=7.0",
    "jupyter>=1.0"
]
all = [
    "reportlab>=3.5.0",
    "ipywidgets>=7.0",
    "jupyter>=1.0"
]

[project.urls]
"Homepage" = "https://github.com/materialslab/grainstat"
"Bug Reports" = "https://github.com/materialslab/grainstat/issues"
"Source" = "https://github.com/materialslab/grainstat"
"Documentation" = "https://grainstat.readthedocs.io/"

[project.scripts]
grainstat = "grainstat.cli:cli_main"

[tool.setuptools]
packages = {find = {}}

[tool.setuptools.packages.find]
where = ["."]
include = ["grainstat*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
grainstat = ["export/templates/*.html", "export/templates/*.md"]

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_third_party = ["numpy", "scipy", "matplotlib", "pandas", "PIL", "skimage"]

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "build",
    "dist"
]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "scipy.*",
    "skimage.*",
    "matplotlib.*",
    "seaborn.*",
    "reportlab.*",
    "PIL.*"
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["grainstat"]
omit = [
    "*/tests/*",
    "*/test_*",
    "setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]